# dspant

./: .gitignore  .pythonrc  404.html  Cargo.toml  README.md  index.html  mkdocs.yml  objects.inv  peak_detector.md  pyproject.toml  template_extaction.md  test  wavefrom_extractor.md
.cargo/: config.toml
.figures/pipelines/: filters.py
.processing_pipeline/data_exporter/: cmr_export.py  tdt2parquet_test.py
.processing_pipeline/dsant_viz_test/: correlogram_plot.py  test_plots.py
.processing_pipeline/hd_figure_pipelines/: continuous_spike_emg_raster.py  correlogram_test.py  crosscorrelograms_explained.py  epoch_extractor_test.py  joint_psth.py  noise_correlation_explained.py  psth-sta_test.py  psth_explained.py  scatter_psth_explained.py  spike_density_test.py  template_test.py  templates_explained.py  trajectory_test.py
.processing_pipeline/stim_comparison/: README.md  fig_code.py  stim_base.py
core-concepts/data-nodes/: index.html
core-concepts/processing-pipeline/: index.html
docs/: index.md
docs/core-concepts/: Adding_custom_processor.md  data-nodes.md  processing-pipeline.md
docs/emg-processor/: overview.md
docs/general-processor/: overview.md
docs/getting-started/: installation.md  quickstart.md
dspant_app/: Cargo copy.toml  Cargo.toml  pyproject.toml
dspant_app/src/: lib.rs
dspant_app/src/dspant_app/: __init__.py
dspant_emgproc/: core.maturin-6-1750128905-2450-3425-login8.ufhpc.2910559  pyproject.toml
dspant_emgproc/rust/: Cargo.toml
dspant_emgproc/src/dspant_emgproc/: __init__.py
dspant_emgproc/src/dspant_emgproc/activity_detection/: single_threshold.py
dspant_emgproc/src/dspant_emgproc/extraction/: __init__.py
dspant_emgproc/src/dspant_emgproc/fatigue_analysis/: __init__.py
dspant_emgproc/src/dspant_emgproc/processors/activity_detection/: __init__.py  bayesian_detector.py  double_threshold.py  entropy_detector.py  single_threshold.py
dspant_emgproc/src/dspant_emgproc/processors/metrics/: functional_metrics.py
dspant_emgproc/src/dspant_emgproc/visualization/: onset_events_plot.py
dspant_neuroproc/: pyproject.toml
dspant_neuroproc/rust/: Cargo.toml
dspant_neuroproc/rust/src/: lib.rs
dspant_neuroproc/rust/src/processors/: mod.rs
dspant_neuroproc/rust/src/processors/spike_analytics/: correlogram.rs  mod.rs  psth.rs
dspant_neuroproc/src/dspant_neuroproc/: __init__.py
dspant_neuroproc/src/dspant_neuroproc/detection/: base.py  peak_detector.py
dspant_neuroproc/src/dspant_neuroproc/extraction/: density_estimation.py  waveform_extractor.py
dspant_neuroproc/src/dspant_neuroproc/metrics/: __init__.py
dspant_neuroproc/src/dspant_neuroproc/processors/: neural_trajectory.py
dspant_neuroproc/src/dspant_neuroproc/processors/detection/: peak_detector.py
dspant_neuroproc/src/dspant_neuroproc/processors/neural_trajectories/: __init__.py  base.py  dpca_trajectory.py  fa_trajectory.py  pca_trajectory.py
dspant_neuroproc/src/dspant_neuroproc/processors/spike_analytics/: base.py  correlogram.py  density_estimation.py  psth.py  sta.py  staw.py
dspant_neuroproc/src/dspant_neuroproc/utils/: spike_utilities.py  template_utils.py
dspant_neuroproc/src/dspant_neuroproc/visualization/: correlogram_plots.py  spike_density_plot.py  spike_density_plots.py
dspant_viz/: API_REFERENCE.md  HOWTO.md  README.md  pyproject.toml
dspant_viz/documents/: API_GUIDE.md  API_REFERENCE.md
dspant_viz/examples/: correlogram_test.py  large_ts_test.py  new_sc_test.py  time_series_test.py  waveforms_test.py
dspant_viz/rust/src/: lib.rs
dspant_viz/src/dspant_viz/: __init__.py
dspant_viz/src/dspant_viz/backends/: __init__.py
dspant_viz/src/dspant_viz/backends/mpl/: correlogram.py  event_annotator.py  psth.py  raster.py  themes.py  time_series.py  ts_area.py  ts_raster.py  waveforms.py
dspant_viz/src/dspant_viz/backends/mpl/composite/: raster_psth.py
dspant_viz/src/dspant_viz/backends/plotly/: correlogram.py  event_annotator.py  psth.py  raster.py  themes.py  time_series.py  ts_area.py  ts_raster.py  waveforms.py
dspant_viz/src/dspant_viz/backends/plotly/composite/: raster_psth.py
dspant_viz/src/dspant_viz/components/spike/: correlogram.py  psth.py  raster.py
dspant_viz/src/dspant_viz/components/stream/: timeseries.py
dspant_viz/src/dspant_viz/core/: base.py  data_models.py  internals.py  themes_manager.py
dspant_viz/src/dspant_viz/utils/: __init__.py  normalization.py
dspant_viz/src/dspant_viz/visualization/: __init__.py
dspant_viz/src/dspant_viz/visualization/composites/: raster_psth.py
dspant_viz/src/dspant_viz/visualization/events/: events_test.py
dspant_viz/src/dspant_viz/visualization/spike/: base.py  correlogram.py  psth.py  raster.py  waveforms.py
dspant_viz/src/dspant_viz/visualization/stream/: base.py  time_series.py  ts_area.py  ts_raster.py
dspant_viz/src/dspant_viz/widgets/: __init__.py  correlogram_inspector.py  psth_raster_inspector.py  waveform_inspector.py
dspant_viz/src/dspant_viz/widgets/tsx/: single_channel_widget.py
dspant_viz/tests/: new_sc_test.py  raster_psth_test.py  single_channel_test.py  test.py  test_event_annotator.py  time_series_test.py  tsarea_test.py
dspant_viz/themes/: neuroscience.toml
emusort/: emusort.py
examples/: spike2toparquet.py
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/processors/: mod.rs
rust/src/processors/basics/: mod.rs  normalization.rs
rust/src/processors/filters/: base_filters.rs  fir_filters.rs  iir_filters.rs  mod.rs
rust/src/processors/spatial/: common_reference.rs  mod.rs  whitening.rs
rust/src/processors/transforms/: mod.rs
search/: search_index.json
tests/: ant2spike.py  core_.py  export_data.py  extract_meps.py  filtering_stft_function-test.py  noise_test.py  onset_detection.py  other_spectogram_classes.py  pca_kmeans_numba_test.py  refactor_test.py  rerun_test.py  restructure_core.py  segment_extraction_test.py  spike_detection_pca_test.py  spike_detection_test.py  tdt2parquet.py  tdt2parquet_test.py  tdt2parquet_v1.py  test_core.py  test_gpu.py  test_zarr_reader.py  trajectory_test.py  whitening-cmr_test.py
(+233 files in other folders)
