[project]
name = "dspant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jesús Peñaloza", email = "jesus.penalozaa@ufl.edu" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
dspant = "dspant:main"

[tool.maturin]
module-name = "dspant._core"
python-packages = ["dspant"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
