[project]
name = "dspant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jesús Peñaloza", email = "jesus.penalozaa@ufl.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "dask[complete]>=2025.1.0",
    "graphviz>=0.20.3",
    "hvplot>=0.11.2",
    "matplotlib>=3.10.0",
    "polars>=1.21.0",
    "pyarrow>=19.0.0",
    "pydantic>=2.10.6",
    "rich>=13.9.4",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "tdt>=0.6.7",
    "zarr>=3.0.2",
]

[project.scripts]
dspant = "dspant:main"

[tool.maturin]
module-name = "dspant._core"
python-packages = ["dspant"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.9.5",
]
