[project]
name = "dspant-emgproc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jesús Peñaloza", email = "jesus.penalozaa@ufl.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "dspant==0.1.0"
]

[project.scripts]
dspant-emgproc = "dspant_emgproc:main"

[tool.maturin]
module-name = "dspant_emgproc._rs"
python-packages = ["dspant_emgproc"]
python-source = "src"
manifest-path = "./rust/Cargo.toml"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.uv]
cache-keys = [{file = "pyproject.toml"}, {file = "./rust/Cargo.toml"}, {file = "**/*.rs"}]