[project]
name = "dspant-viz"
version = "0.1.0"
description = "Multi-backend visualization library for electrophysiology data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dash>=3.0.3",
    "dask>=2025.4.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "numpy>=2.2.5",
    "plotly>=5.24.1",
    "plotly-resampler>=0.10.0",
    "seaborn>=0.13.2",
    "streamlit>=1.44.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.6",
    "mypy>=1.10.0",
    "pytest>=8.1.1",
]

[project.scripts]
dspant-viz = "dspant_viz:main"

[tool.maturin]
module-name = "dspant_viz._rs"
python-packages = ["dspant_viz"]
python-source = "src"
manifest-path = "./rust/Cargo.toml"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
